--- a/index.html
+++ b/index.html
@@ -125,35 +125,11 @@
               <p>Simulation of a misbehaving child.</p>
             </div>
           </div>
-
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a id="playVid2" href="#" onclick="loadLocalVideo('vid/barb')"><img src="https://i.ytimg.com/vi/YoptLoEj_tk/mqdefault.jpg"></a>
-              <h3>Simulation 2</h3>
-              <p>Simulation of Bart Simpson.</p>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a id="playVid3" href="#" onclick="loadLocalVideo('vid/barb')"><img src="https://i.ytimg.com/vi/cNkp4QF3we8/mqdefault.jpg"></a>
-              <h3>Simulation 3</h3>
-              <p>Simulation of Stewie Griffin.</p>
-            </div>
-          </div>
-	  
-          <div class="col-md-4">
-            <div class="thumbnail">
-              <a id="playVid4" href="#" onclick="loadLocalVideo('vid/speech-therapy')"><img src="https://i.ytimg.com/vi/WyQ8a1nqWJk/mqdefault.jpg"></a>
-              <h3>Simulation 4</h3>
-              <p>Simulation of a misbehaving child.</p>
-            </div>
-          </div>
 	  
         </div>
         <hr>
         <footer>
-          <p>Developed by EPICS, in coöperation with the Purdue University Speech, Language and Hearing Sciences Department</p>
+          <p>Developed by EPICS, in cooperation with the Purdue University Speech, Language and Hearing Sciences Department</p>
         </footer>
       </div>
     </div>
