Put in code for first review question

--- a/index.html
+++ b/index.html
@@ -115,23 +115,27 @@
         
       </div>
 
-      <div class="container">
+      <div class="container" id="cont">
         <!-- Example row of columns -->
         <div class="row">
           <div class="col-md-4">
             <div class="thumbnail">
               <a id="playVid1" href="#" onclick="loadLocalVideo('vid/barb')"><img src="https://i.ytimg.com/vi/WyQ8a1nqWJk/mqdefault.jpg"></a>
               <h3>Simulation 1</h3>
-              <p>Simulation of a misbehaving child.</p>
+              <p>Video of Barbara Administering a Test.</p>
             </div>
           </div>
 	  
         </div>
-        <hr>
-        <footer>
-          <p>Developed by EPICS, in cooperation with the Purdue University Speech, Language and Hearing Sciences Department</p>
-        </footer>
       </div>
+      <h3 id="reviewQuest")></h3>
+      <p id="quest1"></p>
+      <button id="yes" onclick="quest1yes()"></button>
+      <button id="no" onclick="quest1no()"></button>
+      <hr>
+      <footer>
+        <p>Developed by EPICS, in cooperation with the Purdue University Speech, Language and Hearing Sciences Department</p>
+      </footer>
     </div>
   </body>
 </html>
