Updated Review Questions

--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
       </div>
       <h3 id="reviewQuest")></h3>
       <p id="quest1"></p>
-      <button id="yes" onclick="quest1yes()"></button>
-      <button id="no" onclick="quest1no()"></button>
+      <p id="quest1ans"></p>
       <hr>
       <footer>
         <p>Developed by EPICS, in cooperation with the Purdue University Speech, Language and Hearing Sciences Department</p>
