Revert "Took out unnecessary video placeholders"
This reverts commit 5c7ff3cddd21d05dd366f10afdc31f5ec6e0e23b.

Conflicts:
	index.html
	js/main.js

--- a/index.html
+++ b/index.html
@@ -122,7 +122,31 @@
             <div class="thumbnail">
               <a id="playVid1" href="#" onclick="loadLocalVideo('vid/barb')"><img src="https://i.ytimg.com/vi/WyQ8a1nqWJk/mqdefault.jpg"></a>
               <h3>Simulation 1</h3>
-              <p>Video of Barbara Administering a Test.</p>
+              <p>Simulation of a misbehaving child.</p>
+            </div>
+          </div>
+
+	<div class="col-md-4">
+            <div class="thumbnail">
+              <a id="playVid2" href="#" onclick="loadLocalVideo('vid/barb')"><img src="https://i.ytimg.com/vi/YoptLoEj_tk/mqdefault.jpg"></a>
+              <h3>Simulation 2</h3>
+              <p>Simulation of Bart Simpson.</p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="thumbnail">
+              <a id="playVid3" href="#" onclick="loadLocalVideo('vid/barb')"><img src="https://i.ytimg.com/vi/cNkp4QF3we8/mqdefault.jpg"></a>
+              <h3>Simulation 3</h3>
+              <p>Simulation of Stewie Griffin.</p>
+            </div>
+          </div>
+
+	<div class="col-md-4">
+            <div class="thumbnail">
+              <a id="playVid4" href="#" onclick="loadLocalVideo('vid/speech-therapy')"><img src="https://i.ytimg.com/vi/WyQ8a1nqWJk/mqdefault.jpg"></a>
+              <h3>Simulation 4</h3>
+              <p>Simulation of a misbehaving child.</p>
             </div>
           </div>
 	  
